# xmind2testcase

./: .env.example  .gitignore  README.md  generate_template.py  manage_db.py  pyproject.toml  run.sh  running.pid  schema.sql
.agent/: Implementation_Report.md  UX_Analysis_TestEngineer_Perspective.md
app/: main.py
app/api/routers/: conversion.py  project.py  records.py  web.py
app/core/: config.py  database.py  logging_config.py
app/lib/xmind2testcase/: metadata.py  parser.py  testlink.py  utils.py  writer.py  zentao.py
app/services/: automation_scanner.py  file_service.py  xmind_service.py
app/static/css/: style.css
app/static/guide/: XMind测试用例模板.xmind
app/static/js/: pagination.js
app/templates/: configs.html  index.html  preview.html  project_detail.html  projects.html
tests/: conftest.py  test_api.py
