[project]
name = "xmind2testcase"
version = "1.2.0"
description = "用例快速转换编辑平台"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.4.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "werkzeug>=3.1.4",
    "xmind>=1.2.0",
]
